--- a/_static/global/css/VT_functionality.css
+++ b/_static/global/css/VT_functionality.css
@@ -67,6 +67,21 @@
   width: 100%;
 }
 
+#game-container {
+  transform: translate(-50%,-50%);
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  width: 60vw;  /*60vw*/
+  min-width: 45vh ;
+  height: 80vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
 
 .btn-content{
   width: 100%;
@@ -82,6 +97,33 @@
   text-decoration: none;
   white-space: nowrap;
   vertical-align: middle;
+  /* align-self: center; */
   cursor: default;
   margin: 1px;
+}
+
+.centered {
+  text-align: center;
+  max-width:100%;
+  max-height:100%;
+}
+
+.btn-outcome {
+  background-color: var(--background-outcome);
+  color:            var(--color-outcome);
+  font-size:        var(--font-size-outcome);
+}  
+
+.btn-hidden{
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-hidden);
+}
+
+#between-button {
+  position: absolute;
+  top: 50vh;
+  line-height: 2em !important;  
+  width: 6em;
+  transform: translate(-50%,-50%);
 }
