working solution for split screen tracer :D yay

--- a/_static/global/css/SplitScreen.css
+++ b/_static/global/css/SplitScreen.css
@@ -10,7 +10,7 @@
     height: 100vh;
     /* bottom:100%; */
     top: 50vh;
-    background-color: blue;
+    background-color: white;
     /* z-index: -1; */
 }
 
